Bug 433175: freeze when specific custom tags are added in a specific order; r/sr=bienvenu